--- a/styles/bio.css
+++ b/styles/bio.css
@@ -1,103 +1,38 @@
-@font-face {
-  font-family: "avenir_next_lt_probold";
-  src: url("/assets/Font/FontsConverted/avenirnextltpro-bold-webfont.woff2") format("woff2"), url("/assets/Font/FontsConverted/avenirnextltpro-bold-webfont.woff") format("woff");
-  font-weight: bold;
-  font-style: normal;
-}
-@font-face {
-  font-family: "avenir_next_lt_prodemi";
-  src: url("/assets/Font/FontsConverted/avenirnextltpro-demi-webfont.woff2") format("woff2"), url("/assets/Font/FontsConverted/avenirnextltpro-demi-webfont.woff") format("woff");
-  font-weight: 600;
-  font-style: normal;
-}
-@font-face {
-  font-family: "avenir_next_lt_proregular";
-  src: url("/assets/Font/FontsConverted/avenirnextltpro-regular-webfont.woff2") format("woff2"), url("/assets/Font/FontsConverted/avenirnextltpro-regular-webfont.woff") format("woff");
-  font-weight: normal;
-  font-style: normal;
-}
-* {
-  font-family: "avenir_next_lt_proregular", sans-serif;
-  font-size: 16px;
-}
-
-body {
-  margin: 0;
-  padding: 0;
-  border: none;
-}
-
-.navsection {
-  background-color: #323232;
-  color: #FFFFFF;
-  width: 100vw;
-}
-
-/* MOBILE BREAKPOINT */
-@media screen and (min-width: 360px) and (max-width: 767px) { /*767px*/
-  .navsection__title {
-    margin: auto;
+@media (min-width: 1280px) {
+  /* Navigation */
+  nav {
     width: 100%;
-    padding: 0.5rem; /*8px*/
-    text-align: center;
   }
-  .navsection__menu--container {
+  .navsection {
     display: flex;
-    width: 100vw;
-    text-align: center;
+  }
+  .navsection__title {
+    padding: 32px;
+    margin-left: 120px;
+    justify-content: center;
+    display: inline-block;
+    margin-right: 40px;
   }
   .nav__text--container {
-    width: 50vw;
-    padding: 0;
-  }
-  .nav__text--container h2 {
-    font-size: 1.5rem; /*24px*/
-    line-height: 2rem; /*36px*/
-  }
-  h1 h2 {
-    font-size: 1.5rem;
-    line-height: 2rem;
-    font-weight: 700;
-  }
-  h1 {
-    margin: 0%;
-    margin-top: 0%;
-    -webkit-margin-start: 0%;
-            margin-inline-start: 0%;
-  }
-  h3 { /*subheader*/
-    font-size: 0.875rem; /*14px*/
-    line-height: 1.375rem; /*22px*/
-    font-weight: 600;
-  }
-  body p {
-    font-size: 0.813rem; /*13px*/
-    line-height: 1.125rem; /*18px*/
+    display: inline-block;
+    padding: 1rem; /*16px */
+    justify-content: center;
   }
   nav a.active {
-    text-decoration: none;
+    text-decoration: underline;
     display: inline-block;
-    border: -1rem solid #323232;
-    padding-left: 39%;
-    padding-right: 39%;
-    border-bottom: 0.3rem solid #FFFFFF;
+    text-underline-offset: 2.25rem; /*36px */
+    text-decoration-color: #FFFFFF;
+    text-decoration-thickness: 0.313rem; /*5px */
     color: #FFFFFF;
-    font-weight: 700;
   }
   nav a.inactive {
     color: #AFAFAF;
   }
-  footer {
-    font-size: 0.813rem; /*13px*/
-    line-height: 1.125rem; /*18px*/
-  }
-  /*labels and buttons
-  text size: 10px | line height 20px | text weight bold 700*/
+  /* Navigation */
   /* HERO SECTION */
   .hero__section {
     width: 100vw;
-    background-color: #323232;
-    opacity: 50%;
   }
   .hero__img--container {
     position: relative;
@@ -111,24 +46,30 @@ body {
   }
   .hero__img--container h1 {
     position: absolute;
-    top: 50%;
-    left: 17svh;
+    top: 47%;
+    left: 35vh;
     transform: translate(-50%, -50%);
-    font-size: 1.5rem; /* 24px */
-    line-height: 2rem; /* 32px */
-    font-weight: 700;
+    font-size: 3.75rem; /* 60px */
+    line-height: 2rem;
+    font-weight: 600;
+  }
+  .hero__opaque--filter {
+    position: absolute;
+    background-color: #323232;
+    opacity: 50%;
   }
   /* HERO SECTION */
   /*ABOUT SECTION */
-  .about__section h1 {
+  .about__section h1, .gallery__title h1 {
     color: #323232;
-    font-size: 1.5rem; /* 24px */
-    line-height: 2rem; /* 32px */
+    font-size: 2.25rem; /* 60px */
+    line-height: 2.75rem; /* 32px */
     font-weight: 700;
-    padding-bottom: 1rem;
+    padding-left: 3rem;
+    margin-left: 4rem;
   }
   .about__section {
-    padding: 1rem;
+    padding: 3rem;
   }
   .musician__image--container {
     display: block;
@@ -136,42 +77,60 @@ body {
     background-size: cover;
     margin-right: auto;
     margin-left: auto;
-    width: 100%;
-    height: 14.375rem; /* 422px */
+    margin-top: 3rem;
+    width: 68vw;
+    height: 60vh;
   }
-  .about__section--text h3, h2 {
-    font-size: 0.875em; /*36x*/
-    line-height: 1.375rem; /*22px */
+  .about__section--text h2 {
+    font-size: 1.5rem; /*24px*/
+    line-height: 2rem; /*32px */
+    font-weight: 700;
+    padding-left: 2.5vw;
+    padding-right: 2.5vw;
+    margin-left: 9.5vw;
+    margin-right: 28vw;
+    margin-top: 2rem;
+  }
+  .about__section--text h3 {
+    font-size: 0.875rem; /*14px*/
+    line-height: 2rem; /*32px */
     font-weight: 600;
+    padding-left: 2.5vw; /*36px*/
+    margin-left: 9vw;
   }
   .about__section--text h4 {
-    font-size: 0.875rem;
-    line-height: 2rem; /*22px */
-    font-weight: 600;
+    padding-left: 3rem; /* 48px */
+    font-size: 1.5rem; /* 24px */
+    line-height: 2.75rem; /*44px */
+    margin-bottom: 0;
+    margin-left: 10rem;
   }
   .about__section--text p {
-    font-size: 0.813rem; /*12px*/
-    line-height: 1.125rem; /*1 8px */
+    font-size: 0.875rem; /*14px*/
+    line-height: 1.375rem; /* 22px */
     font-weight: 400;
   }
+  .about__body--container {
+    display: flex;
+    padding-left: 2rem; /*36px*/
+    padding-right: 3rem; /*36px*/
+    margin-left: 10rem;
+    margin-right: 9rem;
+  }
+  .about__body--paragraph {
+    margin: 1rem;
+  }
   /*ABOUT SECTION */
-  /* Photo Gallery */
+  /* Gallery Section */
   .gallery__section {
     display: flex;
     background-color: #FAFAFA;
     justify-content: center;
-    padding-left: 1.5rem;
-    padding-right: 1.5rem;
-    padding-bottom: 1.5rem;
+    padding-bottom: 3rem;
   }
   .gallery__title {
+    padding: 3rem;
     background-color: #FAFAFA;
-  }
-  .gallery__title h1 {
-    font-size: 1.5rem;
-    line-height: 2rem;
-    font-weight: 700;
-    padding: 1.2rem;
   }
   .gallery__container {
     display: flex;
@@ -182,52 +141,115 @@ body {
     gap: 1rem;
   }
   .gallery__container img {
-    width: 21rem;
+    width: 23rem;
     height: 12.5rem;
   }
   .img__container {
     display: inline-block;
+    width: 23rem;
+    height: 12.5rem;
   }
-  /* Photo Gallery */
-  /* Footer Section */
+  /*gallery Section */
+  /*footer section */
   .footer__container {
+    display: flex;
+    width: 100%;
     background-color: #323232;
-    padding-left: 1.5rem;
+    padding-left: 3rem;
     padding-bottom: 1rem;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    color: #FFFFFF;
   }
   .footer__container h1 {
     color: #FFFFFF;
-    font-size: 1.5rem; /*24px */
-    line-height: 2rem;
+    font-size: 2.75rem; /*60px*/
+    line-height: 2.75rem; /*44px */
     font-weight: 700;
-    padding-top: 1.5rem;
-    padding-bottom: 1.5rem;
+    padding-top: 3rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    order: 0;
+    width: 20rem; /* 340 px */
+    height: 4rem; /* 148px */
+    text-align: center;
+  }
+  .footer__container h3 {
+    margin: 0.25rem;
   }
   .footer__socialicons {
     display: flex;
-    justify-content: flex-start;
-    gap: 2rem;
+    padding-top: 5rem;
+    padding-bottom: 4.75rem;
+    padding-right: 5.75rem;
+    order: 1;
+    width: 38rem;
+    align-items: center;
   }
   .footer__socialicons img {
-    width: 1.5rem;
-    height: 1.5rem;
-    padding-bottom: 1rem;
-  }
-  .footer__container h3 {
-    color: #FFFFFF;
-    margin-bottom: 0;
-    margin-top: 0;
-  }
-  .footer__container P {
-    color: #FFFFFF;
+    align-items: center;
+    width: 4rem;
+    height: 2rem;
   }
   .footer__logo--container {
-    margin-top: 3rem;
+    order: 3;
+    width: 8rem;
+    height: 2rem;
+    margin-top: 5rem;
+    margin-left: 3rem;
+    justify-content: right;
+    margin-bottom: 5rem;
   }
-  /* Footer Section */
+  .footer__title {
+    order: 4;
+    color: #FFFFFF;
+    padding-left: 3rem;
+    width: 17rem;
+  }
+  .footer__title--extended {
+    order: 5;
+    color: #FFFFFF;
+    padding-left: 3rem;
+    width: 36rem;
+  }
+  .footer__paragraph {
+    order: 6;
+    width: 17rem;
+    text-align: left;
+    padding-left: 3rem;
+  }
+  .footer__paragraph--extended {
+    order: 7;
+    width: 27rem;
+    text-align: left;
+    padding-left: 3rem;
+  }
+  .footer__email1 {
+    order: 8;
+    width: 18rem;
+    text-align: left;
+    padding-left: 3rem;
+  }
+  .footer__email2 {
+    order: 9;
+    width: 18rem;
+    text-align: left;
+    padding-left: 2rem;
+  }
+  .footer__email3 {
+    order: 10;
+    width: 18rem;
+    text-align: left;
+    padding-left: 2rem;
+  }
+  .footer_copyright {
+    order: 11;
+    color: #FFFFFF;
+    width: 28rem;
+    text-align: left;
+    padding-left: 3rem;
+  }
 }
-/* MOBILE BREAKPOINT */
-/*---------------------------------------------------------------------------------------- */
 /* Tablet breakpoint*/
 @media screen and (min-width: 768px) and (max-width: 1279px) {
   /* Navigation*/
@@ -286,6 +308,11 @@ body {
     font-size: 3.75rem; /* 60px */
     line-height: 4.25rem; /* 68px */
     font-weight: 600;
+  }
+  .hero__opaque--filter {
+    position: absolute;
+    background-color: #323232;
+    opacity: 50%;
   }
   /* HERO SECTION */
   /*ABOUT SECTION */
@@ -479,44 +506,104 @@ body {
 }
 /*TABLET BREAKPOINT */
 /*----------------------------------------------------------------------------------------*/
-/* DESKTOP BREAKPOINT*/
-@media (min-width: 1280px) {
-  /* Navigation */
-  nav {
-    width: 100%;
-  }
-  .navsection {
-    display: flex;
-  }
+@font-face {
+  font-family: "avenir_next_lt_probold";
+  src: url("../assets/Font/FontsConverted/avenirnextltpro-bold-webfont.woff2") format("woff2"), url("../assets/Font/FontsConverted/avenirnextltpro-bold-webfont.woff") format("woff");
+  font-weight: bold;
+  font-style: normal;
+}
+@font-face {
+  font-family: "avenir_next_lt_prodemi";
+  src: url("../assets/Font/FontsConverted/avenirnextltpro-demi-webfont.woff2") format("woff2"), url("../assets/Font/FontsConverted/avenirnextltpro-demi-webfont.woff") format("woff");
+  font-weight: 600;
+  font-style: normal;
+}
+@font-face {
+  font-family: "avenir_next_lt_proregular";
+  src: url("../assets/Font/FontsConverted/avenirnextltpro-regular-webfont.woff2") format("woff2"), url("../assets/Font/FontsConverted/avenirnextltpro-regular-webfont.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
+* {
+  font-family: "avenir_next_lt_proregular", sans-serif;
+  font-size: 16px;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  border: none;
+}
+
+.navsection {
+  background-color: #323232;
+  color: #FFFFFF;
+  width: 100vw;
+}
+
+/* MOBILE BREAKPOINT */
+@media screen and (min-width: 360px) and (max-width: 767px) { /*767px*/
   .navsection__title {
-    padding: 32px;
-    margin-left: 120px;
-    justify-content: center;
-    display: inline-block;
-    margin-right: 40px;
+    margin: auto;
+    width: 100%;
+    padding: 0.5rem; /*8px*/
+    text-align: center;
+  }
+  .navsection__menu--container {
+    display: flex;
+    width: 100vw;
+    text-align: center;
   }
   .nav__text--container {
-    display: inline-block;
-    padding: 1rem; /*16px */
-    justify-content: center;
+    width: 50vw;
+    padding: 0;
+  }
+  .nav__text--container h2 {
+    font-size: 1.5rem; /*24px*/
+    line-height: 2rem; /*36px*/
+  }
+  h1 h2 {
+    font-size: 1.5rem;
+    line-height: 2rem;
+    font-weight: 700;
+  }
+  h1 {
+    margin: 0%;
+    margin-top: 0%;
+    -webkit-margin-start: 0%;
+            margin-inline-start: 0%;
+  }
+  h3 { /*subheader*/
+    font-size: 0.875rem; /*14px*/
+    line-height: 1.375rem; /*22px*/
+    font-weight: 600;
+  }
+  body p {
+    font-size: 0.813rem; /*13px*/
+    line-height: 1.125rem; /*18px*/
   }
   nav a.active {
-    text-decoration: underline;
+    text-decoration: none;
     display: inline-block;
-    text-underline-offset: 2.25rem; /*36px */
-    text-decoration-color: #FFFFFF;
-    text-decoration-thickness: 0.313rem; /*5px */
+    border: -1rem solid #323232;
+    padding-left: 39%;
+    padding-right: 39%;
+    border-bottom: 0.3rem solid #FFFFFF;
     color: #FFFFFF;
+    font-weight: 700;
   }
   nav a.inactive {
     color: #AFAFAF;
   }
-  /* Navigation */
+  footer {
+    font-size: 0.813rem; /*13px*/
+    line-height: 1.125rem; /*18px*/
+  }
+  /*labels and buttons
+  text size: 10px | line height 20px | text weight bold 700*/
   /* HERO SECTION */
   .hero__section {
     width: 100vw;
-    background-color: #323232;
-    opacity: 50%;
   }
   .hero__img--container {
     position: relative;
@@ -530,25 +617,29 @@ body {
   }
   .hero__img--container h1 {
     position: absolute;
-    top: 47%;
-    left: 35vh;
+    top: 50%;
+    left: 17svh;
     transform: translate(-50%, -50%);
-    font-size: 3.75rem; /* 60px */
-    line-height: 2rem;
-    font-weight: 600;
+    font-size: 1.5rem; /* 24px */
+    line-height: 2rem; /* 32px */
+    font-weight: 700;
+  }
+  .hero__opaque--filter {
+    position: absolute;
+    background-color: #323232;
+    opacity: 50%;
   }
   /* HERO SECTION */
   /*ABOUT SECTION */
-  .about__section h1, .gallery__title h1 {
+  .about__section h1 {
     color: #323232;
-    font-size: 2.25rem; /* 60px */
-    line-height: 2.75rem; /* 32px */
+    font-size: 1.5rem; /* 24px */
+    line-height: 2rem; /* 32px */
     font-weight: 700;
-    padding-left: 3rem;
-    margin-left: 4rem;
+    padding-bottom: 1rem;
   }
   .about__section {
-    padding: 3rem;
+    padding: 1rem;
   }
   .musician__image--container {
     display: block;
@@ -556,60 +647,42 @@ body {
     background-size: cover;
     margin-right: auto;
     margin-left: auto;
-    margin-top: 3rem;
-    width: 68vw;
-    height: 60vh;
+    width: 100%;
+    height: 14.375rem; /* 422px */
   }
-  .about__section--text h2 {
-    font-size: 1.5rem; /*24px*/
-    line-height: 2rem; /*32px */
-    font-weight: 700;
-    padding-left: 2.5vw;
-    padding-right: 2.5vw;
-    margin-left: 9.5vw;
-    margin-right: 28vw;
-    margin-top: 2rem;
-  }
-  .about__section--text h3 {
-    font-size: 0.875rem; /*14px*/
-    line-height: 2rem; /*32px */
+  .about__section--text h3, h2 {
+    font-size: 0.875em; /*36x*/
+    line-height: 1.375rem; /*22px */
     font-weight: 600;
-    padding-left: 2.5vw; /*36px*/
-    margin-left: 9vw;
   }
   .about__section--text h4 {
-    padding-left: 3rem; /* 48px */
-    font-size: 1.5rem; /* 24px */
-    line-height: 2.75rem; /*44px */
-    margin-bottom: 0;
-    margin-left: 10rem;
+    font-size: 0.875rem;
+    line-height: 2rem; /*22px */
+    font-weight: 600;
   }
   .about__section--text p {
-    font-size: 0.875rem; /*14px*/
-    line-height: 1.375rem; /* 22px */
+    font-size: 0.813rem; /*12px*/
+    line-height: 1.125rem; /*1 8px */
     font-weight: 400;
   }
-  .about__body--container {
-    display: flex;
-    padding-left: 2rem; /*36px*/
-    padding-right: 3rem; /*36px*/
-    margin-left: 10rem;
-    margin-right: 9rem;
-  }
-  .about__body--paragraph {
-    margin: 1rem;
-  }
   /*ABOUT SECTION */
-  /* Gallery Section */
+  /* Photo Gallery */
   .gallery__section {
     display: flex;
     background-color: #FAFAFA;
     justify-content: center;
-    padding-bottom: 3rem;
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+    padding-bottom: 1.5rem;
   }
   .gallery__title {
-    padding: 3rem;
     background-color: #FAFAFA;
+  }
+  .gallery__title h1 {
+    font-size: 1.5rem;
+    line-height: 2rem;
+    font-weight: 700;
+    padding: 1.2rem;
   }
   .gallery__container {
     display: flex;
@@ -620,112 +693,79 @@ body {
     gap: 1rem;
   }
   .gallery__container img {
-    width: 23rem;
+    width: 21rem;
     height: 12.5rem;
   }
   .img__container {
     display: inline-block;
-    width: 23rem;
-    height: 12.5rem;
   }
-  /*gallery Section */
-  /*footer section */
-  .footer__container {
-    display: flex;
+  /* Photo Gallery */
+  /*------------------------------------------------------------------------------------------------------------------------ */
+  /*Comment Section */
+  .comment__section {
+    justify-content: left;
+    align-items: center;
+    padding-bottom: 1.5rem;
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+  }
+  .comment__section h1 {
+    font-size: 1.5rem; /*24px */
+    line-height: 2rem;
+    font-weight: 700;
+    padding-bottom: 1.5rem;
+    padding-right: 1.5rem;
     width: 100%;
-    background-color: #323232;
-    padding-left: 3rem;
-    padding-bottom: 1rem;
+  }
+  .comment__section p {
+    margin: 0rem;
+    padding-top: 1.5rem;
+  }
+  .user__icon--container {
     flex-wrap: wrap;
-    justify-content: flex-start;
-    color: #FFFFFF;
+  }
+  .user__icon {
+    height: 3rem;
+    width: 3rem;
+    border-radius: 50%;
+  }
+  /*Comment Section */
+  /* Footer Section */
+  .footer__container {
+    background-color: #323232;
+    padding-left: 1.5rem;
+    padding-bottom: 1rem;
   }
   .footer__container h1 {
     color: #FFFFFF;
-    font-size: 2.75rem; /*60px*/
-    line-height: 2.75rem; /*44px */
+    font-size: 1.5rem; /*24px */
+    line-height: 2rem;
     font-weight: 700;
-    padding-top: 3rem;
-    padding-left: 1rem;
-    padding-right: 1rem;
-    order: 0;
-    width: 20rem; /* 340 px */
-    height: 4rem; /* 148px */
-    text-align: center;
-  }
-  .footer__container h3 {
-    margin: 0.25rem;
+    padding-top: 1.5rem;
+    padding-bottom: 1.5rem;
   }
   .footer__socialicons {
     display: flex;
-    padding-top: 5rem;
-    padding-bottom: 4.75rem;
-    padding-right: 5.75rem;
-    order: 1;
-    width: 38rem;
-    align-items: center;
+    justify-content: flex-start;
+    gap: 2rem;
   }
   .footer__socialicons img {
-    align-items: center;
-    width: 4rem;
-    height: 2rem;
+    width: 1.5rem;
+    height: 1.5rem;
+    padding-bottom: 1rem;
+  }
+  .footer__container h3 {
+    color: #FFFFFF;
+    margin-bottom: 0;
+    margin-top: 0;
+  }
+  .footer__container P {
+    color: #FFFFFF;
   }
   .footer__logo--container {
-    order: 3;
-    width: 8rem;
-    height: 2rem;
-    margin-top: 5rem;
-    margin-left: 3rem;
-    justify-content: right;
-    margin-bottom: 5rem;
+    margin-top: 3rem;
   }
-  .footer__title {
-    order: 4;
-    color: #FFFFFF;
-    padding-left: 3rem;
-    width: 17rem;
-  }
-  .footer__title--extended {
-    order: 5;
-    color: #FFFFFF;
-    padding-left: 3rem;
-    width: 36rem;
-  }
-  .footer__paragraph {
-    order: 6;
-    width: 17rem;
-    text-align: left;
-    padding-left: 3rem;
-  }
-  .footer__paragraph--extended {
-    order: 7;
-    width: 27rem;
-    text-align: left;
-    padding-left: 3rem;
-  }
-  .footer__email1 {
-    order: 8;
-    width: 18rem;
-    text-align: left;
-    padding-left: 3rem;
-  }
-  .footer__email2 {
-    order: 9;
-    width: 18rem;
-    text-align: left;
-    padding-left: 2rem;
-  }
-  .footer__email3 {
-    order: 10;
-    width: 18rem;
-    text-align: left;
-    padding-left: 2rem;
-  }
-  .footer_copyright {
-    order: 11;
-    color: #FFFFFF;
-    width: 28rem;
-    text-align: left;
-    padding-left: 3rem;
-  }
-}/*# sourceMappingURL=bio.css.map */
+  /* Footer Section */
+}
+/* MOBILE BREAKPOINT */
+/*---------------------------------------------------------------------------------------- *//*# sourceMappingURL=bio.css.map */
