--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -1,8 +1,8 @@
 
 
-@use 'partials/_desktopBreakpoint';
-@use 'partials/_tabletBreakpoint';
-@use 'partials/_variables';
+@use './partials/desktopBreakpoint' as *;
+@use './partials/tabletBreakpoint' as *;
+@use './partials/variables' as *;
 
 @font-face {
     font-family: 'avenir_next_lt_probold';
@@ -106,7 +106,7 @@ body {
     nav a.active {
         text-decoration: none;
         display: inline-block;
-        border: -1rem solid map-get($colors , bandSite__black);
+        border: -1rem solid map-get($colors ,  bandSite__black);
         padding-left: 39%;
         padding-right: 39%;
         border-bottom: .3rem solid map-get($colors , cta__text--active );
@@ -131,8 +131,7 @@ body {
 
     .hero__section {
         width: 100vw;
-        background-color: #323232;
-        opacity: 50%;
+        //background-color: #323232;
     }
     .hero__img--container {
         position: relative;
@@ -154,6 +153,12 @@ body {
         line-height: 2rem; /* 32px */ 
         font-weight: 700;
         
+    }
+    
+    .hero__opaque--filter {
+        position: absolute ;
+        background-color: #323232;
+        opacity: 50%;
     }
 
     /* HERO SECTION */
@@ -259,25 +264,39 @@ body {
 
     /*Comment Section */
 
-    .comment_section {
-        display: flex;
-    }
-
-    .user__icon {
-        margin:0rem;
-        padding: 0rem;
-        box-sizing: border-box;
-    }
-
-    .user__icon img {
-        width: 100%;
-        height: 100%;
-        justify-content: center;
+    .comment__section {
+        justify-content:left;
         align-items: center;
-        border-radius: 50%;
-        border: 1rem solid #FFFFFF;
-
+        padding-bottom: 1.5rem;
+        padding-left: 1.5rem;
+        padding-right: 1.5rem;
     }
+    
+    .comment__section h1 {
+        font-size: 1.5rem; /*24px */
+        line-height: 2rem;
+        font-weight: 700;
+        padding-bottom: 1.5rem;
+        padding-right: 1.5rem;
+        width: 100%;
+    }
+
+    .comment__section p {
+        margin: 0rem;
+        padding-top: 1.5rem;
+    }
+
+    .user__icon--container {
+      flex-wrap: wrap;
+    }
+    
+    .user__icon {
+        height: 3rem;
+        width: 3rem;
+        border-radius: 50%;
+    }
+
+   
 
 
 
