--- a/styles/bio.css
+++ b/styles/bio.css
@@ -674,10 +674,40 @@ body {
   .user__icon--container {
     flex-wrap: wrap;
   }
+  .comment__form {
+    border-bottom-color: #E1E1E1;
+    border-bottom: 1px solid;
+    padding-bottom: 1rem;
+  }
   .user__icon {
     height: 3rem;
     width: 3rem;
     border-radius: 50%;
+  }
+  .saved__comment--container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+  }
+  .user__icon--blank {
+    background-color: #E1E1E1;
+    opacity: 50%;
+    border-radius: 50%;
+    width: 2.25rem;
+    height: 2.25rem;
+  }
+  .comment__creator {
+    width: 7rem;
+    margin: 0;
+  }
+  .date__text {
+    flex: 2 1 auto;
+    justify-self: right;
+    text-align: right;
+    width: 2rem;
+    height: 2rem;
+    color: #AFAFAF;
+    font-size: 0.813rem; /*13px*/
   }
   /*Comment Section */
   /* Footer Section */
