--- a/styles/shows.css
+++ b/styles/shows.css
@@ -348,13 +348,40 @@
   /* SHOWS Section */
   .shows__section {
     display: flex;
-    padding-top: 1.5rem;
-    padding-bottom: 1.5rem;
-    border-bottom: 0.3rem solid #AFAFAF;
+    padding: 3rem;
+    flex-wrap: wrap;
+    flex-direction: column;
+  }
+  .table__container {
+    width: 100%;
+  }
+  .show__table {
+    width: 100%;
+    table-layout: fixed;
+    border-collapse: collapse;
   }
   .shows__section h1 {
     font-size: 3.75rem; /* 60px */
     line-height: 4.25rem; /* 68px */
+    font-weight: 700;
+  }
+  .table__container th {
+    font-size: 0.875rem; /*14px*/
+    line-height: 1.375rem;
+    font-weight: 600;
+    text-align: left;
+    color: #AFAFAF;
+  }
+  .show__table tr {
+    padding: 1rem;
+  }
+  .table__row {
+    border-bottom: 2px solid #E1E1E1;
+    padding-bottom: 1rem;
+  }
+  .table__data--date {
+    font-size: 0.875rem;
+    line-height: 2rem;
     font-weight: 700;
   }
   /* Footer Section */
