--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -341,7 +341,7 @@ body {
     }
 
     .comment__creator {
-        width: 7rem;
+        width: 100%;
         margin: 0;
         padding-top: 2rem;
         padding-left: .75rem;
