--- a/styles/bio.css
+++ b/styles/bio.css
@@ -150,6 +150,55 @@
     height: 12.5rem;
   }
   /*gallery Section */
+  /*Shows Section */
+  .shows__section {
+    display: flex;
+    padding: 3rem;
+    flex-wrap: wrap;
+    flex-direction: column;
+  }
+  .table__container {
+    width: 100%;
+  }
+  .show__table {
+    width: 100%;
+    table-layout: fixed;
+    border-collapse: collapse;
+  }
+  .shows__section h1 {
+    font-size: 3.75rem; /* 60px */
+    line-height: 4.25rem; /* 68px */
+    font-weight: 700;
+  }
+  .table__container th {
+    font-size: 0.875rem; /*14px*/
+    line-height: 1.375rem;
+    font-weight: 600;
+    text-align: left;
+    color: #AFAFAF;
+  }
+  .show__table tr {
+    padding: 1rem;
+  }
+  .table__row {
+    border-bottom: 2px solid #E1E1E1;
+    padding-bottom: 1rem;
+  }
+  .table__data--date {
+    font-size: 0.875rem;
+    line-height: 2rem;
+    font-weight: 700;
+  }
+  .ticket__button {
+    align-self: center;
+    background-color: #323232;
+    color: #FFFFFF;
+    height: 2.5rem; /*40px*/
+    width: 100%;
+    border-radius: 0.25rem; /*4px*/
+    border: none;
+  }
+  /*Shows Section */
   /*footer section */
   .footer__container {
     display: flex;
@@ -301,7 +350,7 @@
     color: #FFFFFF;
     background-image: url(../assets/Images/hero-shows.jpg);
     background-size: cover;
-    height: 60vh;
+    height: 65vh;
     width: 100vw;
     overflow: hidden;
     display: flex;
@@ -383,6 +432,15 @@
     font-size: 0.875rem;
     line-height: 2rem;
     font-weight: 700;
+  }
+  .ticket__button {
+    align-self: center;
+    background-color: #323232;
+    color: #FFFFFF;
+    height: 2.5rem; /*40px*/
+    width: 100%;
+    border-radius: 0.25rem; /*4px*/
+    border: none;
   }
   /* Footer Section */
   .footer__container {
