--- a/styles/bio.css
+++ b/styles/bio.css
@@ -56,8 +56,6 @@
     overflow: hidden;
     display: flex;
     flex-direction: row;
-    justify-content: center;
-    align-items: center;
   }
   .hero__img--container h1 {
     position: absolute;
@@ -74,7 +72,8 @@
     line-height: 2.75rem;
     font-weight: 600;
     order: 0;
-    right: 40%;
+    padding: 3rem;
+    margin-left: 120px;
   }
   .hero__opaque--filter {
     position: absolute;
