Fix mobile css for comments

--- a/styles/bio.css
+++ b/styles/bio.css
@@ -799,7 +799,10 @@ body {
     display: flex;
     flex-direction: row;
     width: 100%;
-    align-items: flex-start;
+  }
+  .add__comment p {
+    width: 2.25rem;
+    height: 1.25rem;
   }
   .user__icon--container {
     width: 3rem;
