--- a/styles/bio.css
+++ b/styles/bio.css
@@ -378,7 +378,7 @@
   }
   /* Navigation*/
   /*ABOUT SECTION */
-  .about__section h1, .gallery__title h1 {
+  .about__section h1 {
     color: #323232;
     font-size: 3.75rem; /* 60px */
     line-height: 4.25rem; /* 68px */
@@ -487,6 +487,43 @@
     width: 50%;
   }
   /* HERO SECTION */
+  /* Gallery Section */
+  .gallery__section {
+    display: flex;
+    background-color: #FAFAFA;
+    justify-content: center;
+    padding-bottom: 3rem;
+  }
+  .gallery__title {
+    padding: 3rem;
+    background-color: #FAFAFA;
+    color: #323232;
+    font-size: 3.75rem; /* 60px */
+    line-height: 4.25rem; /* 68px */
+    font-weight: 700;
+    margin: 0;
+  }
+  .gallery__container {
+    display: flex;
+    width: 100%;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    padding-left: 3rem;
+    padding-right: 3rem;
+    overflow: hidden;
+    gap: 1rem;
+  }
+  .img__container {
+    flex: 0 0 33.333333%;
+    overflow: hidden;
+    position: relative;
+  }
+  .gallery__container img {
+    display: inline-block;
+    width: 23rem;
+    height: 12.5rem;
+  }
+  /*gallery Section */
   /* SHOWS Section */
   .shows__section {
     display: flex;
