--- a/styles/bio.css
+++ b/styles/bio.css
@@ -507,11 +507,9 @@
     display: flex;
     width: 100%;
     flex-wrap: wrap;
-    justify-content: space-evenly;
     padding-left: 3rem;
     padding-right: 3rem;
     overflow: hidden;
-    gap: 1rem;
   }
   .img__container {
     flex: 0 0 33.333333%;
@@ -519,9 +517,9 @@
     position: relative;
   }
   .gallery__container img {
-    display: inline-block;
-    width: 23rem;
+    width: 20rem;
     height: 12.5rem;
+    padding: 0.5rem;
   }
   /*gallery Section */
   /* SHOWS Section */
@@ -807,13 +805,21 @@ body {
     padding: 1rem;
   }
   .musician__image--container {
-    display: block;
     background-image: url(../assets/Images/band.jpg);
     background-size: cover;
     margin-right: auto;
     margin-left: auto;
     width: 100%;
     height: 14.375rem; /* 422px */
+    overflow: hidden;
+    -o-object-fit: contain;
+       object-fit: contain;
+    position: relative;
+  }
+  .musician__image--container img {
+    width: 100%;
+    -o-object-fit: contain;
+       object-fit: contain;
   }
   .about__section--text h3, h2 {
     font-size: 0.875em; /*36x*/
